Bug 491204 - New game set up
Summary: New game set up
Status: RESOLVED FIXED
Alias: None
Product: knights
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.6.24052
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-03 07:54 UTC by alex.hucke@gmail.com
Modified: 2025-01-13 19:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description alex.hucke@gmail.com 2024-08-03 07:54:29 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY


STEPS TO REPRODUCE
1. start app
2. try to play
3. 

OBSERVED RESULT
can't play

EXPECTED RESULT
can play

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: open SuSE Tumbleweed slowroll
KDE Plasma Version: 6.1.3
KDE Frameworks Version: 6.3.0
Qt Version: 6.7.2

ADDITIONAL INFORMATION
Hi,

when you start Knights, the chessboard will be created straight away, but it can't be used. You've to click on "new" to set up a new game before you can use the app. Can the dialog for setting up the game be shown directly after the app start?

kind regards
alex
Comment 1 Alexander Semke 2024-10-13 13:28:17 UTC
Git commit 83a1ce72bc25c34c3585dc9c7064d1db1be6feaa by Alexander Semke.
Committed on 13/10/2024 at 13:28.
Pushed by asemke into branch 'master'.

Bring up the dialog to start a new game on application start-up which is the
most frequent step anyway. It's still possible to load a png file, which
is the second most common wokflow, by closing this dialog and clicking on "Load".
FIXED-IN: 24.12

M  +5    -0    src/knights.cpp

https://invent.kde.org/games/knights/-/commit/83a1ce72bc25c34c3585dc9c7064d1db1be6feaa
Comment 2 alex.hucke@gmail.com 2025-01-13 19:33:24 UTC
Hi Alexander,

it works perfectly now.

many thanks 
alex