Bring up the dialog to start a new game on application start-up which is the most frequent step anyway. It's still possible to load a png file, which is the second most common wokflow, by closing this dialog and clicking on "Load".

BUG: 491204
FIXED-IN: 24.12